--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,11 +38,13 @@ jobs:
         continue-on-error: true
         working-directory: ./terraform
       
-      - name: Import Existing Security Group (If Apply fails)
+      - name: Import Existing Security Group and Destroy Old EC2 Instances (If Apply fails)
         if: steps.apply.outcome == 'failure' # This will run if the previous step failed
         run: |
           SECURITY_GROUP_ID=$(aws ec2 describe-security-groups --region eu-central-1 --filters Name=group-name,Values=allow_http_ssh --query 'SecurityGroups[*].GroupId' --output text)
           terraform import module.security_group.aws_security_group.allow_http_ssh $SECURITY_GROUP_ID
+          terraform destroy -auto-approve -target aws_instance.old_instance
+
         working-directory: ./terraform
 
       - name: Terraform Apply (Retry after import)
